--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "dotenv": "10.0.0",
     "jquery": "3.6.3",
     "js-yaml": "4.1.0",
+    "jsonfile": "6.1.0",
+    "megadb": "^3.4.0",
     "moment": "2.29.4",
     "moment-duration-format": "2.3.2",
-    "jsonfile": "6.1.0",
     "ms": "2.1.3",
     "node-fetch": "2.6.9",
     "node-superfetch": "0.2.3",
