--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ru-core",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "custom discord bot core",
   "main": "main.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "megadb": "^3.4.0",
     "moment": "2.29.4",
     "moment-duration-format": "2.3.2",
+    "moonlink.js": "^3.6.8",
     "ms": "2.1.3",
     "node-fetch": "2.6.9",
     "node-superfetch": "0.2.3",
